--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
               <input class="booking__date" type="time" name="time" required="">
             </label>
   
-            <select name="number">
+            <select class="booking__number" name="number">
               <option value="">Сколько человек</option>
               <option value="">1</option>
               <option value="">2</option>
@@ -247,7 +247,7 @@
               <input type="mailto" name="email" required="">
             </label>
   
-            <button type="submit">Забронировать</button>
+            <button class="booking__btn" type="submit">Забронировать</button>
           </div>
         </form>
       </div>
