--- a/index.html
+++ b/index.html
@@ -64,7 +64,11 @@
           </div>
         </div>
 
-        <button class="hero__btn" type="submit">Забронировать</button>        
+        <button class="hero__btn" type="submit">Забронировать</button>
+        
+        <button class="hero__down" type="submit">
+          <img class="hero__down_image" src="img/down.svg" alt="">
+        </button>
       </div>
     </section>
 
@@ -393,24 +397,39 @@
         <h2 class="faq__title title">Частые вопросы</h2>
 
         <ul class="faq__list">
-          <li class="faq__item">
-            Можно ли забронировать комнату онлайн
+          <li class="faq__item">Можно ли забронировать комнату онлайн
+
+            <button class="faq__btn">
+              <img src="img/open-purple.svg" alt="" class="faq__image" width="46" height="46">
+            </button>
           </li>
 
-          <li class="faq__item">
-            Могут ли мне вернуть деньги за бронь
+          <li class="faq__item"> Могут ли мне вернуть деньги за бронь
+
+            <button class="faq__btn">
+              <img src="img/open.svg" alt="" class="faq__image" width="46" height="46">
+            </button>
           </li>
 
-          <li class="faq__item">
-            Какая комната самая популярная
+          <li class="faq__item"> Какая комната самая популярная
+
+            <button class="faq__btn">
+              <img src="img/open-purple.svg" alt="" class="faq__image" width="46" height="46">
+            </button>
           </li>
 
-          <li class="faq__item">
-            Как получить VIP карту
+          <li class="faq__item"> Как получить VIP карту
+
+            <button class="faq__btn">
+              <img src="img/open.svg" alt="" class="faq__image" width="46" height="46">
+            </button>
           </li>
           
-          <li class="faq__item">
-            Какая комната самая популярная
+          <li class="faq__item"> Какая комната самая популярная
+
+            <button class="faq__btn">
+              <img src="img/open-purple.svg" alt="" class="faq__image" width="46" height="46">
+            </button>
           </li>
         </ul>
       </div>
