--- a/index.html
+++ b/index.html
@@ -399,37 +399,27 @@
         <ul class="faq__list">
           <li class="faq__item">Можно ли забронировать комнату онлайн
 
-            <button class="faq__btn">
-              <img src="img/open-purple.svg" alt="" class="faq__image" width="46" height="46">
-            </button>
+            <button class="faq__btn"></button>
           </li>
 
           <li class="faq__item"> Могут ли мне вернуть деньги за бронь
 
-            <button class="faq__btn">
-              <img src="img/open.svg" alt="" class="faq__image" width="46" height="46">
-            </button>
+            <button class="faq__btn faq__btn_purple"></button>
           </li>
 
           <li class="faq__item"> Какая комната самая популярная
 
-            <button class="faq__btn">
-              <img src="img/open-purple.svg" alt="" class="faq__image" width="46" height="46">
-            </button>
+            <button class="faq__btn"></button>
           </li>
 
           <li class="faq__item"> Как получить VIP карту
 
-            <button class="faq__btn">
-              <img src="img/open.svg" alt="" class="faq__image" width="46" height="46">
-            </button>
+            <button class="faq__btn faq__btn_purple"></button>
           </li>
           
           <li class="faq__item"> Какая комната самая популярная
 
-            <button class="faq__btn">
-              <img src="img/open-purple.svg" alt="" class="faq__image" width="46" height="46">
-            </button>
+            <button class="faq__btn"></button>
           </li>
         </ul>
       </div>
