--- a/index.html
+++ b/index.html
@@ -66,9 +66,7 @@
 
         <button class="hero__btn" type="submit">Забронировать</button>
         
-        <button class="hero__down" type="submit">
-          <img class="hero__down_image" src="img/down.svg" alt="">
-        </button>
+        <button class="hero__down" type="submit"></button>
       </div>
     </section>
 
