--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           отдыха с друзьями!</h2>
   
         <div class="release__cards">
-          <div class="release__card">
+          <div class="release__card card">
             <p class="release__card_desc card-vr">VR очки</p>
           </div>
   
