--- a/index.html
+++ b/index.html
@@ -305,7 +305,9 @@
 
         <div class="about__content">
           <div class="about__content_left">
-            <img class="about__content_image" src="img/about-1.jpg" width="300" height="206" alt="">
+            <img src="img/photos.jpg" width="600" height="596" alt="" class="about__content_image">            
+
+            <!-- <img class="about__content_image" src="img/about-1.jpg" width="300" height="206" alt="">
 
             <img class="about__content_image" src="img/about-2.jpg" width="300" height="206" alt="">
 
@@ -317,7 +319,7 @@
 
             <img class="about__content_image" src="img/about-6.jpg" width="380" height="166" alt="">
 
-            <img class="about__content_image" src="img/about-7.jpg" width="220" height="166" alt="">
+            <img class="about__content_image" src="img/about-7.jpg" width="220" height="166" alt=""> -->
 
           </div>
           <div class="about__content_right">
