--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
   <header class="header">
     <div class="container">
       <div class="header__wrapper">
-        <img class="header__logo" src="img/logo.svg" alt="Логотип Game Over">
+        <button class="burger"></button>
+
+        <img class="header__logo" src="img/logo.svg" width="120" height="66" alt="Логотип Game Over">
 
         <nav class="header__nav">
           <ul class="header__list">
@@ -51,17 +53,9 @@
         <p class="hero__subtitle">Новый формат игр и отдыха</p>
 
         <div class="hero__blocks">
-          <div class="hero__block">
-            <p class="hero__block_title">4</p>
+          <div class="hero__block_title"></div>
   
-            <p class="hero__block_desc">Тематических зала</p>
-          </div>
-  
-          <div class="hero__block">
-            <p class="hero__block_title new">new</p>
-  
-            <p class="hero__block_desc">Новейшая аппаратура</p>
-          </div>
+          <div class="hero__block_desc"></div>
         </div>
 
         <button class="hero__btn" type="submit">Забронировать</button>
