--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <header class="header">
-    <div class="container">
+    <div class="container header__container">
       <div class="header__wrapper">
         <button class="burger"></button>
 
@@ -47,7 +47,7 @@
 
   <main class="main">
     <section class="hero">
-      <div class="container">
+      <div class="container hero__container">
         <h1 class="hero__title">GAME OVER</h1>
 
         <p class="hero__subtitle">Новый формат игр и отдыха</p>
@@ -64,7 +64,7 @@
       </div>
     </section>
 
-    <section class="release">
+    <section class="release release__container">
       <div class="container">
         <h2 class="release__title title">У нас есть все для классного<br>
           отдыха с друзьями!</h2>
@@ -100,7 +100,7 @@
     </section>
 
     <section class="halls" id="halls">
-      <div class="container">
+      <div class="container halls__container">
         <h2 class="halls__title title">наши залы</h2>
 
         <div class="halls__cards">
@@ -124,7 +124,7 @@
     </section>
 
     <section class="booking" id="booking">
-      <div class="container">
+      <div class="container booking__container">
         <form action="https://jsonplaceholder.typicode.com/posts" method="post">
           <h2 class="booking__title title">Забронировать зал просто</h2>
   
@@ -294,7 +294,7 @@
     </section>
 
     <section class="about" id="about">
-      <div class="container">
+      <div class="container about__container">
         <h2 class="about__title title">о нас</h2>
 
         <div class="about__content">
