--- a/index.html
+++ b/index.html
@@ -70,30 +70,30 @@
           отдыха с друзьями!</h2>
   
         <div class="release__cards">
-          <div class="release__card card">
-            <p class="release__card_desc card-vr">VR очки</p>
+          <div class="release__card card-vr">
+            <p class="release__card_desc">VR очки</p>
           </div>
   
-          <div class="release__card card">                        
-            <p class="release__card_desc card-audio">Аудио-система 5.1<br>
+          <div class="release__card card-audio">                        
+            <p class="release__card_desc">Аудио-система 5.1<br>
               с отличным звуком</p>
           </div>
   
-          <div class="release__card card">            
-            <p class="release__card_desc card-karaoke">Караоке (4 микрофона)</p>
+          <div class="release__card card-karaoke">            
+            <p class="release__card_desc">Караоке (4 микрофона)</p>
           </div>
   
-          <div class="release__card card">            
-            <p class="release__card_desc card-games">Настольные игры</p>
+          <div class="release__card card-games">            
+            <p class="release__card_desc">Настольные игры</p>
           </div>
   
-          <div class="release__card card">            
-            <p class="release__card_desc card-films">Кино сервисы Netflix, IVI, MegoGo, КиноПоиск, Okko</p>
+          <div class="release__card card-films">            
+            <p class="release__card_desc">Кино сервисы Netflix, IVI, MegoGo, КиноПоиск, Okko</p>
           </div>
   
-          <div class="release__card card">
+          <div class="release__card card-playstation">
             
-            <p class="release__card_desc card-playstation">РlаyStаtiоn 5</p>
+            <p class="release__card_desc">РlаyStаtiоn 5</p>
           </div>
         </div>
       </div>
