--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   <title>GAME OVER - Новый формат игр и отдыха</title>
 
   <link rel="stylesheet" href="css/style.css">
+
+  <script defer src="js/jquery-3.6.0.min.js"></script>
+  <script defer src="js/jquery-ui.min.js"></script>
+  <script defer src="js/script.js"></script>
 </head>
 <body>
   <header class="header">
@@ -65,7 +69,7 @@
     </section>
 
     <section class="release">
-      <div class="container release__container">
+      <div class="container">
         <h2 class="release__title title">У нас есть все для классного<br>
           отдыха с друзьями!</h2>
   
@@ -394,12 +398,52 @@
         <h2 class="faq__title title">Частые вопросы</h2>
 
         <ul class="faq__list">
-          <li class="faq__item">Можно ли забронировать комнату онлайн
-
-            <button class="faq__btn"></button>
+          <li class="faq__item">
+            <h3 class="faq__btn">
+              <span class="faq__item_title">Можно ли забронировать комнату онлайн</span>
+            </h3>
+            <p class="faq__item_text">
+              Да, забронировать комнату вы можете онлайн, заполнив форму на нашем сайте. Также вы можете забронировать комнату позвонив по телефону 8 (999) 958 - 48 - 38
+            </p>
           </li>
 
-          <li class="faq__item"> Могут ли мне вернуть деньги за бронь
+          <li class="faq__item">
+            <h3 class="faq__btn faq__btn_purple">
+              <span class="faq__item_title">Могут ли мне вернуть деньги за бронь</span>
+            </h3>
+            <p class="faq__item_text">
+              Да, забронировать комнату вы можете онлайн, заполнив форму на нашем сайте. Также вы можете забронировать комнату позвонив по телефону 8 (999) 958 - 48 - 38
+            </p>
+          </li>
+
+          <li class="faq__item">
+            <h3 class="faq__btn">
+              <span class="faq__item_title">Какая комната самая популярная</span>
+            </h3>
+            <p class="faq__item_text">
+              Да, забронировать комнату вы можете онлайн, заполнив форму на нашем сайте. Также вы можете забронировать комнату позвонив по телефону 8 (999) 958 - 48 - 38
+            </p>
+          </li>
+
+          <li class="faq__item faq__item_purple">
+            <h3 class="faq__btn">
+              <span class="faq__item_title">Как получить VIP карту</span>
+            </h3>
+            <p class="faq__item_text">
+              Да, забронировать комнату вы можете онлайн, заполнив форму на нашем сайте. Также вы можете забронировать комнату позвонив по телефону <strong>8 (999) 958 - 48 - 38</strong>
+            </p>
+          </li>
+
+          <li class="faq__item">
+            <h3 class="faq__btn">
+              <span class="faq__item_title">Какая комната самая популярная</span>
+            </h3>
+            <p class="faq__item_text">
+              Да, забронировать комнату вы можете онлайн, заполнив форму на нашем сайте. Также вы можете забронировать комнату позвонив по телефону 8 (999) 958 - 48 - 38
+            </p>
+          </li>
+
+          <!-- <li class="faq__item">Могут ли мне вернуть деньги за бронь
 
             <button class="faq__btn faq__btn_purple"></button>
           </li>
@@ -417,7 +461,7 @@
           <li class="faq__item"> Какая комната самая популярная
 
             <button class="faq__btn"></button>
-          </li>
+          </li> -->
         </ul>
       </div>
     </section>
