--- a/index.html
+++ b/index.html
@@ -584,14 +584,14 @@
       
               <li class="contacts__item">
                 <a href="#" class="contacts__link" target="_blank">
-                  <svg width="50" height="50" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M0 25.14C0 37.569 9.027 47.904 20.834 50V31.944h-6.25V25h6.25v-5.556c0-6.25 4.026-9.721 9.722-9.721 1.805 0 3.75.277 5.555.554v6.39h-3.194c-3.057 0-3.75 1.527-3.75 3.473V25h6.666l-1.11 6.944h-5.556V50C40.973 47.904 50 37.57 50 25.14 50 11.312 38.75 0 25 0S0 11.313 0 25.14Z" fill="currentColor"/>
-                    <path fill="currentColor" d="M0 0h50v50H0z"/></svg>
+                  <svg width="50" height="50" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" clip-rule="evenodd" d="M0 25.14C0 37.569 9.027 47.904 20.834 50V31.944h-6.25V25h6.25v-5.556c0-6.25 4.026-9.721 9.722-9.721 1.805 0 3.75.277 5.555.554v6.39h-3.194c-3.057 0-3.75 1.527-3.75 3.473V25h6.666l-1.11 6.944h-5.556V50C40.973 47.904 50 37.57 50 25.14 50 11.312 38.75 0 25 0S0 11.313 0 25.14Z" fill="currentColor"/></g><defs><path fill="currentColor" d="M0 0h50v50H0z"/></defs></svg>
                 </a>
               </li>
       
               <li class="contacts__item">
                 <a href="https://telegram.org" class="contacts__link" target="_blank">
-                  <svg width="50" height="50" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M50 25a25 25 0 1 1-50 0 25 25 0 0 1 50 0Zm-24.103-6.544c-2.431 1.013-7.294 3.107-14.581 6.282-1.182.468-1.803.93-1.86 1.38-.093.76.86 1.06 2.157 1.47l.546.171c1.275.416 2.994.9 3.885.92.812.018 1.715-.313 2.712-1 6.81-4.598 10.325-6.92 10.544-6.97.156-.037.375-.08.519.05.147.128.131.375.116.441-.094.403-3.835 3.878-5.77 5.678-.602.563-1.03.96-1.118 1.05-.193.197-.389.39-.588.581-1.187 1.144-2.075 2 .047 3.4 1.022.675 1.841 1.229 2.657 1.785.887.606 1.775 1.21 2.925 1.965.29.188.572.391.843.585 1.035.737 1.97 1.4 3.116 1.294.669-.063 1.36-.688 1.71-2.563.828-4.428 2.456-14.019 2.83-17.972.023-.329.01-.659-.04-.984a1.053 1.053 0 0 0-.356-.678 1.644 1.644 0 0 0-.969-.291c-.938.016-2.384.519-9.325 3.406Z" fill="currentColor"/><path fill="currentColor" d="M0 0h50v50H0z"/></svg>
+                  <svg width="50" height="50" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M50 25a25 25 0 1 1-50 0 25 25 0 0 1 50 0Zm-24.103-6.544c-2.431 1.013-7.294 3.107-14.581 6.282-1.182.468-1.803.93-1.86 1.38-.093.76.86 1.06 2.157 1.47l.546.171c1.275.416 2.994.9 3.885.92.812.018 1.715-.313 2.712-1 6.81-4.598 10.325-6.92 10.544-6.97.156-.037.375-.08.519.05.147.128.131.375.116.441-.094.403-3.835 3.878-5.77 5.678-.602.563-1.03.96-1.118 1.05-.193.197-.389.39-.588.581-1.187 1.144-2.075 2 .047 3.4 1.022.675 1.841 1.229 2.657 1.785.887.606 1.775 1.21 2.925 1.965.29.188.572.391.843.585 1.035.737 1.97 1.4 3.116 1.294.669-.063 1.36-.688 1.71-2.563.828-4.428 2.456-14.019 2.83-17.972.023-.329.01-.659-.04-.984a1.053 1.053 0 0 0-.356-.678 1.644 1.644 0 0 0-.969-.291c-.938.016-2.384.519-9.325 3.406Z" fill="currentColor"/></g><defs><path fill="currentColor" d="M0 0h50v50H0z"/></defs></svg>
                 </a>
               </li>
             </ul> 
@@ -605,7 +605,7 @@
         <div class="contacts__copyright">
           <p>&copy; Game Over, 2022</p>
 
-          <p>Design by Anastasia Ilina<br>ilina9825@gmail.com</p>
+          <p class="contacts__author">Design by Anastasia Ilina<br>ilina9825@gmail.com</p>
         </div>
       </div>
     </section>
