--- a/index.html
+++ b/index.html
@@ -66,8 +66,9 @@
           </div>
 
           <a href="#booking" class="hero__btn">Забронировать</a>
+
+          <a href="#release" class="hero__down"></a>          
           
-          <button class="hero__down" type="submit"></button>
         </div>
       </div>
     </section>
