--- a/index.html
+++ b/index.html
@@ -140,9 +140,11 @@
           <div class="booking__hall">
             <h3 class="booking__hall_title block-title">Выбери зал</h3>
             <div class="booking__hall_radios">
-              <div class="booking__hall_radio">
+              <div class="booking__hall_radio booking__hall_radio-click">
                 <label>
-                  <input type="radio" name="hall" value="80's vibes" style="display: none;" checked>80's vibes
+                  80's vibes
+                  
+                  <input type="radio" name="hall" value="80's vibes" style="display: none;" checked>
                 </label>
               </div>
     
