--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       </div>
     </section>
 
-    <section class="release" id="release">
+    <section class="release" id="release" hidden>
       <div class="container">
         <h2 class="release__title title">У нас есть все для классного<br>
           отдыха с друзьями!</h2>
@@ -108,7 +108,7 @@
       </div>
     </section>
 
-    <section class="halls" id="halls">
+    <section class="halls" id="halls" hidden>
       <div class="container">
         <h2 class="halls__title title">наши залы</h2>
 
@@ -132,7 +132,7 @@
       </div>
     </section>
 
-    <section class="booking" id="booking">
+    <section class="booking" id="booking" hidden>
       <div class="container">
         <form action="https://jsonplaceholder.typicode.com/posts" method="post">
           <h2 class="booking__title title">Забронировать зал просто</h2>
@@ -332,7 +332,7 @@
       </div>
     </section>
 
-    <section class="about" id="about">
+    <section class="about" id="about" hidden>
       <div class="container about__container">
         <h2 class="about__title title">о нас</h2>
 
@@ -361,7 +361,7 @@
       </div>
     </section>
 
-    <section class="feedback" id="feedback">
+    <section class="feedback" id="feedback" hidden>
       <div class="container">
         <h1 class="feedback__title title">Отзывы посетителей</h1>
         
@@ -421,7 +421,7 @@
       </div>
     </section> 
     
-    <section class="faq">
+    <section class="faq" hidden>
       <div class="container">
         <h2 class="faq__title title">Частые вопросы</h2>
 
@@ -508,7 +508,7 @@
     </section> -->
   </main>
 
-  <footer class="footer">
+  <footer class="footer" hidden>
     <section class="contacts" id="contacts">
       <div class="container">
         <h2 class="contacts__title title">контакты</h2>
