--- a/index.html
+++ b/index.html
@@ -575,7 +575,11 @@
         <div class="contacts__copyright">
           <p>&copy; Game Over, 2022</p>
 
-          <p class="contacts__author">Design by Anastasia Ilina<br>ilina9825@gmail.com</p>
+        <div>
+          <p class="contacts__author">Design by Anastasia Ilina</p>
+
+          <a class="contacts__email_contact contact" href="mailto:ilina9825@gmail.com">ilina9825@gmail.com</a>          
+        </div>
         </div>
       </div>
     </section>
