--- a/index.html
+++ b/index.html
@@ -580,5 +580,25 @@
       </div>
     </section>
   </footer>
+
+  <div class="modal">
+    <div class="container">
+      <h2 class="modal__title title">Заказать звонок</h2>
+
+      <form action="" class="modal__form">
+        <div class="modal__date">
+          <label>Имя<br>
+            <input type="text" name="name">
+          </label>
+    
+          <label>Телефон<br>
+            <input type="tel" name="phone">
+          </label>
+        </div>
+        
+        <button class="modal__btn" type="submit">Позвонить мне</button>
+      </form>
+    </div>
+  </div>
 </body>
 </html>
