--- a/index.html
+++ b/index.html
@@ -583,6 +583,8 @@
 
   <div class="modal">
     <div class="container">
+      <button class="modal__close"></button>
+
       <h2 class="modal__title title">Заказать звонок</h2>
 
       <form action="" class="modal__form">
