--- a/index.html
+++ b/index.html
@@ -591,17 +591,18 @@
         <form action="" class="modal__form">
           <div class="modal__date">
             <label>Имя<br>
-              <input type="text" name="name">
+              <input class="modal__input" type="text" name="name">
             </label>
       
             <label>Телефон<br>
-              <input type="tel" name="phone">
+              <input class="modal__input" type="tel" name="phone">
             </label>
           </div>
         
         <button class="modal__btn" type="submit">Позвонить мне</button>
       </form>
       </div>
+      <!-- <div class="overlay"></div> -->
     </div>
   </div>
 </body>
