--- a/index.html
+++ b/index.html
@@ -488,8 +488,8 @@
             </p>
           </li>
 
-          <li class="faq__item faq__item_purple">
-            <h3 class="faq__btn">
+          <li class="faq__item">
+            <h3 class="faq__btn faq__btn_purple">
               <span class="faq__item_title">Как получить VIP карту</span>
             </h3>
             <p class="faq__item_text">
