--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/swiper-bundle.min.css"/>
 
-  <script src="https://api-maps.yandex.ru/2.1/?apikey=cc0e32e4-b5fd-4f9c-ac1a-c006f40f1428&lang=ru_RU" type="text/javascript">
-  </script>
+  <script defer src="https://api-maps.yandex.ru/2.1/?apikey=cc0e32e4-b5fd-4f9c-ac1a-c006f40f1428&lang=ru_RU" type="text/javascript"></script>
 
   <script defer src="js/swiper-bundle.min.js"></script>
   <script defer src="js/jquery-3.6.0.min.js"></script>
@@ -487,7 +486,7 @@
             <div class="contacts__address">
               <img class="contacts__address_image contact-image" src="img/location.svg" alt="Иконка геолокации">
       
-              <p class="contacts__address_contact contact">г. Москва<br> ул. Аквамарина, 16</p>
+              <p class="contacts__address_contact contact">г. Москва,<br> ул. Усачёва, 29, к.3</p>
             </div>
         
             <p class="contacts__phone">
