--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <img class="header__logo" src="img/logo.svg" width="120" height="66" alt="Логотип Game Over">
 
-        <nav class="header__nav">
+        <nav class="header__nav navigation">
           <ul class="header__list">
             <li class="header__item">
               <a class="header__link" href="#halls">Залы</a>
@@ -165,7 +165,7 @@
 
     <section class="booking" id="booking">
       <div class="container">
-        <form action="https://jsonplaceholder.typicode.com/posts" method="post">
+        <form class="booking__form" method="post">
           <h2 class="booking__title title">Забронировать зал просто</h2>
   
           <fieldset class="booking__hall">
@@ -555,7 +555,7 @@
 
         <h2 class="modal__title title">Заказать звонок</h2>
 
-        <form action="" class="modal__form">
+        <form class="modal__form">
           <div class="modal__date">
             <label>Имя<br>
               <input class="modal__input" type="text" name="name">
