--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <img class="header__logo" src="img/logo.svg" width="120" height="66" alt="Логотип Game Over">
 
-        <nav class="header__nav navigation">
+        <nav>
           <ul class="header__list">
             <li class="header__item">
               <a class="header__link" href="#halls">Залы</a>
@@ -47,6 +47,8 @@
             </li>
           </ul>
         </nav>
+
+        <div class="popup"></div>
       
         <button class="header__btn" type="submit">Заказать звонок</button>
       </div>
