--- a/index.html
+++ b/index.html
@@ -556,32 +556,8 @@
     </section>
   </footer>
 
-  <div class="overlay overlay_active">
-    <div class="modal" style="display: none;">
-      <div class="container">
-        <div class="modal__content">
-          <button class="modal-close"></button>
-  
-          <h2 class="modal__title title">Заказать звонок</h2>
-  
-          <form class="modal__form">
-            <div class="modal__date">
-              <label>Имя<br>
-                <input class="modal__input" type="text" name="name">
-              </label>
-        
-              <label>Телефон<br>
-                <input class="modal__input" type="tel" name="phone">
-              </label>
-            </div>
-          
-            <button class="modal__btn" type="submit">Позвонить мне</button>
-          </form>
-        </div>
-      </div>
-    </div>
-
-    <div class="modal modal_active">
+  <div class="overlay">
+    <div class="modal">
       <div class="modal__container">
         <h2 class="modal__title title">Заказать звонок</h2>
 
@@ -608,7 +584,5 @@
       </div>
     </div>
   </div>
-
-  <!-- <div class="overlay"></div> -->
 </body>
 </html>
