--- a/index.html
+++ b/index.html
@@ -414,16 +414,16 @@
           </div>
 
           <button class="feedback__arrow_left">
-            <svg width="34" height="66" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="m32.527 0 1.414 1.414L1.414 33.941 0 32.527 32.527 0Z" fill="#6C0287"/>
-              <path d="m0 32.527 1.414-1.414L33.941 63.64l-1.414 1.414L0 32.527Z" fill="#6C0287"/>
+            <svg  viewbox="0 0 34 66" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+              <path d="m32.527 0 1.414 1.414L1.414 33.941 0 32.527 32.527 0Z"/>
+              <path d="m0 32.527 1.414-1.414L33.941 63.64l-1.414 1.414L0 32.527Z"/>
             </svg>
           </button>
 
           <button class="feedback__arrow_right">
-            <svg width="35" height="66" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M1.527 0 .113 1.414 32.64 33.941l1.414-1.414L1.527 0Z" fill="#6C0287"/>
-              <path d="m34.054 32.527-1.414-1.414L.113 63.64l1.414 1.414 32.527-32.527Z" fill="#6C0287"/>
+            <svg  viewbox="0 0 35 66" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+              <path d="M1.527 0 .113 1.414 32.64 33.941l1.414-1.414L1.527 0Z"/>
+              <path d="m34.054 32.527-1.414-1.414L.113 63.64l1.414 1.414 32.527-32.527Z"/>
             </svg>
           </button>
         </div>
