--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/swiper-bundle.min.css"/>
+  <link rel="stylesheet" href="css/datepicker.min.css">
 
   <script defer src="https://api-maps.yandex.ru/2.1/?apikey=cc0e32e4-b5fd-4f9c-ac1a-c006f40f1428&lang=ru_RU" type="text/javascript"></script>
 
+  <script defer src="js/datepicker.min.js"></script>
   <script defer src="js/swiper-bundle.min.js"></script>
   <script defer src="js/jquery-3.6.0.min.js"></script>
   <script defer src="js/jquery-ui.min.js"></script>
@@ -285,7 +287,7 @@
               <div class="booking__date_block block-date">
                 <div class="booking__date_list">
                   <label>
-                    <input class="booking__date_item" type="date" name="date">
+                    <input class="booking__date_item" name="date">
                   </label>
         
                   <label>
