--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>GAME OVER - Новый формат игр и отдыха</title>
 
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/swiper-bundle.min.css"/>
   <link rel="stylesheet" href="css/datepicker.min.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/swiper-bundle.min.css"/>  
 
   <script defer src="https://api-maps.yandex.ru/2.1/?apikey=cc0e32e4-b5fd-4f9c-ac1a-c006f40f1428&lang=ru_RU" type="text/javascript"></script>
 
@@ -287,7 +287,7 @@
               <div class="booking__date_block block-date">
                 <div class="booking__date_list">
                   <label>
-                    <input class="booking__date_item" name="date">
+                    <input class="booking__date_item" type="text" name="date" placeholder="Дата">
                   </label>
         
                   <label>
@@ -309,7 +309,7 @@
               <div class="booking__date_block">
                 <div class="booking__date_name">
                   <label>Имя<br>
-                    <input type="text" name="name">
+                    <input type="text" name="name" required>
                   </label>
                 </div>
       
