--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
             </div>
           </fieldset>
 
-          <div class="booking__date" hidden>
+          <!-- <div class="booking__date" hidden>
             <h3 class="booking__date_title block-title">Выбери дату и время</h3>
   
             <div class="booking__date_wrapper">
@@ -290,9 +290,9 @@
                     <input class="booking__date_item" type="text" name="date" placeholder="Дата" required>
                   </label>
         
-                  <!-- <label>
+                  <label>
                     <input class="booking__time_item" type="time" name="time">
-                  </label> -->
+                  </label>
 
                   <select class="booking__time_item" name="time" required>
                     <option value="">Время</option>
@@ -353,7 +353,7 @@
                 <button class="booking__btn" type="submit">Забронировать</button>
               </div>
             </div>
-          </div>
+          </div> -->
 
           <div class="booking__date">
             <h3 class="booking__date_title block-title">Выбери дату и время</h3>
